# cppami

./: .clang-format  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/c++ami/: Connection.hpp  CppAmiDefs.h  EventDispatcher.hpp  StreamParser.hpp
include/c++ami/action/: Action.hpp  Challenge.hpp  DeviceStateList.hpp  Events.hpp  ExtensionState.hpp  Getvar.hpp  ListCommands.hpp  Login.hpp  Logoff.hpp  MailboxCount.hpp  MailboxStatus.hpp  ParkedCalls.hpp  Parkinglots.hpp  Ping.hpp  VoicemailBoxSummary.hpp  VoicemailRefresh.hpp
include/c++ami/event/: Event.hpp
include/c++ami/net/: SocketReader.hpp  SocketWriter.hpp  TcpSocket.hpp
include/c++ami/reaction/: Event.hpp  EventList.hpp  Reaction.hpp
include/c++ami/util/: KeyValDict.hpp  ScopeGuard.hpp
src/: Connection.cpp  EventDispatcher.cpp  StreamParser.cpp
src/action/: Action.cpp  Challenge.cpp  DeviceStateList.cpp  Events.cpp  ExtensionState.cpp  Getvar.cpp  ListCommands.cpp  Login.cpp  Logoff.cpp  MailboxCount.cpp  MailboxStatus.cpp  ParkedCalls.cpp  Parkinglots.cpp  Ping.cpp  VoicemailBoxSummary.cpp  VoicemailRefresh.cpp
src/event/: Event.cpp
src/net/: SocketReader.cpp  SocketWriter.cpp  TcpSocket.cpp
src/reaction/: Event.cpp  EventList.cpp  Reaction.cpp
src/util/: KeyValDict.cpp  ScopeGuard.cpp
tests/: CMakeLists.txt
tests/src/: ami_message_tests.cpp  main.cpp  scope_guard_tests.cpp
